fix: fix MusicPlayer component layout issue
fix: #38 #14

--- a/client/src/components/MusicPlayer/styles.css
+++ b/client/src/components/MusicPlayer/styles.css
@@ -3,11 +3,17 @@
   position: fixed;
   width: 100%;
   bottom: 0;
-  padding: 3rem;
+  padding: 1rem;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-areas: 'first-row' 'second-row';
+  box-shadow: 0 12.5px 100px -10px rgba(50, 50, 73, 0.4), 0 10px 10px -10px rgba(50, 50, 73, 0.3);
+}
+
+.first-row + .second-row {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-evenly;
   flex-shrink: 10;
   flex-grow: 1;
-  box-shadow: 0 12.5px 100px -10px rgba(50, 50, 73, 0.4), 0 10px 10px -10px rgba(50, 50, 73, 0.3);
 }
